ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
/* */

/* ########################################################################################################### */


/* Collaboration Branding colors - darkest is gray1 */
.gray1 { color: #1f1f1f !important;}
.gray2 { color: #353838 !important;}
.gray3 { color: #505354 !important;}
.gray4 { color: #949494 !important;}
.gray5 { color: #b8b8b8 !important;}
.gray6 { color: #c4c4c4 !important;}
.gray7 { color: #cccccc !important;}
.gray8 { color: #e0e0e0 !important;}
.gray9 { color: #ededed !important;}

.displayBlock       { display: block;        }
.displayInline      { display: inline;       }
.displayInlineBlock { display: inline-block; }
	
/* Styles used with the activity stream control */
.activityStreamCtrl
{
	top: 8px !important;
	background: #fff;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

.activityStreamActionsPanel
{
	cursor: pointer;
	position: absolute;
	right: 5px;
	top: 5px;
}

.activityStreamActionsPanel:hover
{
	background: url(images/blends/teal_slice.png) repeat-x;
	background-position:center;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

.activityStreamActionsPanel:hover span
{
	color: #135c8f !important;
}

.activityStreamActionsLabel
{
	color: #666666;
	font-size: 11px;
	padding-left: 5px;
	padding-right: 2px;
	text-align: right;
	vertical-align: middle;
}

.activityStreamActionsLabelBold
{
	color: black;
}


.activityStreamActionsImg1, .activityStreamActionsImg2
{
	padding-right: 4px;
	vertical-align: middle;
}

.activityStreamSearchingPanel
{
	font-size: 14px;
	background-color: #EBECA5;
	border-color: #BABDB6;
	border-style: solid solid solid;
	border-width: 1px;
	padding: 5px 10px;
	position: absolute;
	top: 25px;
	z-index: 100;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

.activityStreamNoEntriesFoundPanel
{
	font-size: 14px;
	background-color: #EBECA5;
	border-color: #BABDB6;
	border-style: solid solid solid;
	border-width: 1px;
	padding: 5px 10px;
	position: absolute;
	top: 150px;
	z-index: 100;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

.activityStreamCtrlFooter
{
	background-color: #EFEEEC;
	border-top: 1px solid #BABDB6;
	padding: 3px;
	vertical-align: middle;
	width: 100%;
	-moz-border-radius-bottomleft: 5px;
	-moz-border-radius-bottomright: 5px;
	-webkit-border-bottom-left-radius: 5px;
	-webkit-border-bottom-right-radius: 5px;
}

.activityStreamFooterImages
{
	text-align: center; 
	vertical-align: middle;
	width: 100%;
}

.activityStreamCtrlHeader
{
	color: #5691A6 !important;
	font-size: 20px;
	padding-bottom: 20px;
	padding-left: 10px;
	padding-top: 10px;
}

.activityStreamCtrlHeader2
{
	padding-right: 250px;
}

.activityStreamCtrlHeaderTitle
{
	color: #5691a6;
	text-decoration: none;
}

.activityStreamCtrlHeaderSubtitle
{
	color: #b8b8b8;
	font-size: .7em;
	margin-left: .7em;
	padding: 5px;
	white-space: nowrap;
}

.activityStreamCtrlHeaderActionsTable
{
	position: absolute;
	right: 10px;
	top: 5px;
}

.activityStreamCtrlHeaderShowImg, .activityStreamCtrlHeaderRefresh, .activityStreamCtrlHeaderPausePlay
{
	cursor: pointer;
}

.activityStreamCtrlHeaderNextRefreshLabel
{
	color: #666666;
	font-size: 10px;
	text-align: right;
}

 .activityStreamCtrlHeaderShowSettingLabel
{
	color: #666666;
	cursor: pointer;
	font-size: 11px;
	padding-right: 5px;
	text-align: right;
}
 

.activityStreamHover, .shareThisDlgNameHover, .groupMembershipNameHover
{
	cursor: pointer;
	background: url(images/blends/teal_slice.png) repeat-x;
	background-position:center;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}
.activityStreamHover span {
	color: #135c8f;
}

.activityStreamCtrlSearchResultsPanel
{
	overflow: auto;
	padding-left: 10px;
	position: relative;
}

.activityStreamTopEntryMainPanel
{
	border-top: 0px solid #d2d5d1;
	padding-right: 5px;
	padding-bottom: 8px;
	padding-left: 0px;
	position: relative;
	margin-top: 8px;
}

.activityStreamCommentMainPanel
{
	border-top: 1px solid #d2d5d1;
	margin-left: 55px;
	margin-top: 10px;
	padding-right: 10px;
	padding-left: 0px;
	position: relative;
}

.activityStreamEntryAuthor
{
	color: #353838;
	display: inline;
	font-size: 11px;
	font-weight: bold;
	padding-right: 6px;
	padding-left: 1px;
	vertical-align: top;
}
.activityStreamEntryAuthor:hover
{
	color: #135c8f;
}
	
.activityStreamEntryDate
{
	font-size: 10px;
	color: #666666;
	display: inline;
	padding-right: 10px;
	white-space: nowrap;
	vertical-align: top;
}

.activityStreamEntryDesc
{
	color: #333333;
	font-size: 12px;
	margin-top: 4px;
	margin-left: 1px;
}

.activityStreamCommentAvatarImg
{
	left: 0;
	position: absolute;
	top: 1px;
	width: 25px;
}

.activityStreamTopEntryAvatarImg
{
	left: 2px;
	position: absolute;
	top: 1px;
	width: 40px;
}

.activityStreamCommentHeader
{
	border-top: 0px solid #d2d5d1;
	font-size: 13px;
	line-height: 15px;
	margin-left: 35px;
	padding-right: 25px;
}

.activityStreamTopEntryHeader
{
	background: #ededed;
	border-top: 1px solid #d2d5d1;
	padding-right: 65px;
	padding-left: 55px;
	-moz-border-radius-bottomleft: 3px;
	-moz-border-radius-bottomright: 3px;
	-webkit-border-bottom-left-radius: 3px;
	-webkit-border-bottom-right-radius: 3px;
}

.activityStreamCommentContentPanel
{
	font-size: 12px;
	height: 2.7em;
	margin-left: 35px;
	overflow: hidden;
	white-space: normal;
}

.activityStreamTopEntryContentPanel
{
	font-size: 13px;
	height: 4.65em;
	margin-top: 5px;
	margin-left: 55px;
	overflow: hidden;
	white-space: normal;
}

.activityStreamTopEntryTitlePanel
{
	padding-bottom: 4px;
	padding-right: 10px;
	padding-top: 4px;
}

.activityStreamCommentTitlePanel
{
	padding-bottom: 4px;
	padding-right: 30px;
	padding-top: 4px;
}

.activityStreamTopEntryTitle
{
	color: #135c8f;
	font-size: 14px;
	line-height: 15px;
}

.activityStreamCommentTitle
{
	color: #135c8f;
	font-size: 14px;
	line-height: 15px;
}

.activityStreamTopEntryBinderName
{
	color: #666666 !important;
	font-size: 10px;
	white-space: nowrap;
}

.activityStreamPresencePanel
{
	display: none;
	vertical-align: top;
}
/* ... */

